lowcode-formula-parent/lowcode-formula-parser/src/main/resources/g4/FxParser.g4
parser grammar FxParser;

options {
    tokenVocab = FxLexer;
    superClass = FxParserBase;
}

fx
    : fxStatement EOF
    ;

fxStatement
    : literal                                                              # LiteralExpression
    ;

literal
    : StringLiteral
    | numericLiteral
    ;

numericLiteral
    : DecimalLiteral
    ;
